# Automated-Incident-Response-Ban-Engine-Python

./: .gitignore  .gitingnore  README.md  ban_state.json  pyproject.toml
docs/: devlog.md  manuale-tecnico.md  manuale-utente.md  proposta.md  scelte.md  uso-ia.md
src/ban_engine/: cli.py  config.py  engine.py  state.py
src/ban_engine.egg-info/: PKG-INFO  SOURCES.txt
src/ban_engine/firewall/: __init__.py  base.py  dry_run.py  linux.py  windows.py
tests/: test_cli.py  test_config.py  test_engine.py  test_firewall_polymorphism.py  test_state.py
